fix homepage z-index

--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -536,7 +536,6 @@ video {
   }
 
   &-container {
-    z-index: 100;
     position: relative;
   }
 
